--- a/project 1/style.css
+++ b/project 1/style.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
+:root {
+  /* creating variables in css by creating 'custom properties' */
+  --sucess-color: green;
+  --error-color: orangered;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -52,6 +58,40 @@ h2 {
 }
 
 .form-control input:focus {
+  /* ':' is sudo selector for defining an action  */
   outline: 0;
   border-color: #777;
+}
+
+.form-control.success input {
+  border-color: var(--sucess-color);
+}
+
+.form-control.error input {
+  border-color: var(--error-color);
+}
+
+.form-control small {
+  color: var(--error-color);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  visibility: hidden;
+}
+
+.form-control.error small {
+  visibility: visible;
+}
+
+.form button {
+  cursor: pointer;
+  background-color: navy;
+  border: 2px solid navy;
+  border-radius: 5px;
+  color: white;
+  display: block;
+  font-size: 16px;
+  padding: 10px;
+  margin-top: 20px;
+  width: 100%;
 }
