--- a/project 1/style.css
+++ b/project 1/style.css
@@ -37,7 +37,7 @@ h2 {
 }
 
 .form-control {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   padding-bottom: 20px;
   position: relative;
 }
@@ -94,4 +94,21 @@ h2 {
   padding: 10px;
   margin-top: 20px;
   width: 100%;
+}
+
+button.home {
+  cursor: pointer;
+  background-color: lightgray;
+  border: 2px solid lightgray;
+  color: white;
+  display: block;
+  padding: 10px;
+  font-size: 16px;
+  padding: 10px;
+  margin-top: 20px;
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
 }
