--- a/project 1/style.css
+++ b/project 1/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  background-color: #ecf0f1;
+  background-color: hsl(0, 0%, 50%, 0.1);
   font-family: "Open Sans", sans-serif;
   /* Below code is use most of the time to center content */
   display: flex;
@@ -25,11 +25,12 @@ body {
   background-color: white;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgb(0, 0, 0, 0.3); /* use to add a shadow around a box */
+  width: 450px;
 }
 
 h2 {
   text-align: center;
-  margin: 0 0 20px;
+  margin-bottom: 20px;
 }
 
 .form {
@@ -37,7 +38,7 @@ h2 {
 }
 
 .form-control {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   padding-bottom: 20px;
   position: relative;
 }
@@ -49,8 +50,8 @@ h2 {
 }
 
 .form-control input {
-  border: 2px solid #ecf0f1;
-  border-radius: 5px;
+  border: 2px solid lightgrey;
+  border-radius: 4px;
   display: block;
   width: 100%;
   padding: 10px;
@@ -60,7 +61,7 @@ h2 {
 .form-control input:focus {
   /* ':' is sudo selector for defining an action  */
   outline: 0;
-  border-color: #777;
+  border-color: gray;
 }
 
 .form-control.success input {
@@ -85,9 +86,9 @@ h2 {
 
 .form button {
   cursor: pointer;
-  background-color: navy;
+  background-color: #3725f8;
   border: 2px solid navy;
-  border-radius: 5px;
+  border-radius: 4px;
   color: white;
   display: block;
   font-size: 16px;
@@ -111,4 +112,8 @@ button.home {
 
 a {
   text-decoration: none;
+}
+
+.nav {
+  display: block;
 }
